<resources>
    <string name="app_name">HomeWork</string>
    <string name="dz1_first">Первый</string>
    <string name="dz1_second">Второй</string>
    <string name="dz1_change">Поменять</string>
    <string name="dz2_text_dz1">dz1</string>
    <string name="dz2_text_dz2">dz2</string>
    <string name="dz3_text_dz3">dz3</string>
    <string name="dz3_text_login">dz3Login</string>
    <string name="dz3_button_download">Загрузить</string>
    <string name="dz3_text_link">https://i.imgur.com/enarCUc.jpg</string>
    <string name="dz3_text_Username">Username</string>
    <string name="dz3_text_Password">Password</string>
    <string name="dz3_button1">Log in</string>
    <string name="dz3_button2">Create account</string>
    <string name="dz3_text_forgot"><u>Forgot your username/password?</u></string>
    <string name="dz4_textBytton_clock">Часы</string>
    <string name="dz4_textButton_diagram">Диаграмма</string>
    <string name="dz5_text_dz5">dz5</string>
    <string name="get_state">Get state</string>
    <string name="dz6_text_dz6">dz6</string>
    <string name="dz6_text_save">save</string>
    <string name="dz6_text_cancel">cancel</string>
    <string name="dz6_text_change">Редактировать</string>
    <string name="dz9_text_dz9">dz9</string>
    <string name="dz9_text_save">save</string>
    <string name="dz15_text_button">get contact</string>
    <string name="dz15_text_dz15">dz15</string>


</resources>
