<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/dz1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dz2_text_dz1" />

    <Button
        android:id="@+id/dz2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dz2_text_dz2" />

    <Button
        android:id="@+id/dz3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dz3_text_dz3" />

    <Button
        android:id="@+id/dz3Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dz3_text_login" />

    <Button
        android:id="@+id/dz4Clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dz4_textBytton_clock" />

    <Button
        android:id="@+id/dz4Diagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dz4_textButton_diagram" />

    <Button
        android:id="@+id/dz5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dz5_text_dz5" />

</LinearLayout>
